# vibe-legal-form-filler

./: .gitignore  .mcp.json  CLAUDE.md  NOTICE  README.md  SELF_AUDIT_REPORT.md  SELF_TEST_REPORT.md  pyproject.toml  requirements.txt
.claude/: settings.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v2.1-REQUIREMENTS.md  v2.1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: antigravity-setup.md  claude-code-setup.md  gemini-cli-setup.md  http-transport.md
src/: __init__.py  __main__.py  http_transport.py  mcp_app.py  models.py  pair_id_resolver.py  server.py  tool_errors.py  tools_extract.py  tools_write.py  validators.py  verification.py  xml_formatting.py  xml_snippet_matching.py  xml_utils.py  xml_validation.py
src/handlers/: excel.py  excel_indexer.py  excel_verifier.py  excel_writer.py  pdf.py  pdf_indexer.py  pdf_verifier.py  pdf_writer.py  word.py  word_dry_run.py  word_element_analysis.py  word_fields.py  (+5 more)
tests/: conftest.py  create_fixtures.py  e2e_word_test.py  test_cell_safety.py  test_e2e_integration.py  test_ergonomics.py  test_excel.py  test_file_path.py  test_http_concurrency.py  test_http_errors.py  test_http_protocol.py  test_http_transport_parity.py  test_http_utilities.py  test_pair_id_resolver.py  test_pdf.py  test_resolution.py  test_word.py  test_word_indexer.py  test_word_verifier.py  test_xml_utils.py
(+72 files in other folders)
