[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "form-filler-mcp"
version = "0.1.0"
description = "MCP server exposing form-filling tools for copilot agents"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.23.0",
    "lxml>=4.9.1",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "pymupdf>=1.24.0",
    "pydantic>=2.4.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
